@@ -1,3 +1,7 @@
+2010-05-30  Kirit Saelensminde  <kirit@felspar.com>
+ Host
+ - A host can now be configured with a port number as the service.
+
 2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
  Web server
  - Added the 207 response code
